--- a/package.json
+++ b/package.json
@@ -14,7 +14,30 @@
   "author": "545570335@qq.com",
   "license": "MIT",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
     "node-fetch": "^1.7.3",
     "puppeteer": "^0.13.0"
+  },
+  "devDependencies": {
+    "agent-base": "^4.1.2",
+    "async-limiter": "^1.0.0",
+    "brace-expansion": "^1.1.8",
+    "concat-map": "^0.0.1",
+    "es6-promise": "^4.1.1",
+    "extract-zip": "^1.6.6",
+    "fd-slicer": "^1.0.1",
+    "inflight": "^1.0.6",
+    "mime": "^2.0.3",
+    "minimatch": "^3.0.4",
+    "minimist": "^1.2.0",
+    "mkdirp": "^0.5.1",
+    "once": "^1.4.0",
+    "path-is-absolute": "^1.0.1",
+    "pend": "^1.2.0",
+    "progress": "^2.0.0",
+    "typedarray": "^0.0.6",
+    "ultron": "^1.1.1",
+    "wrappy": "^1.0.2",
+    "yauzl": "^2.9.1"
   }
 }
