--- a/package.json
+++ b/package.json
@@ -14,45 +14,8 @@
     },
     "author": "545570335@qq.com",
     "license": "MIT",
-    "dependencies": {
-        "cheerio": "^1.0.0-rc.2",
-        "node-fetch": "^1.7.3",
-        "puppeteer": "^0.13.0"
-    },
+    "dependencies": {},
     "devDependencies": {
-        "agent-base": "^4.1.2",
-        "async-limiter": "^1.0.0",
-        "balanced-match": "^1.0.0",
-        "brace-expansion": "^1.1.8",
-        "concat-map": "^0.0.1",
-        "concat-stream": "^1.6.0",
-        "debug": "^3.1.0",
-        "es6-promise": "^4.1.1",
-        "es6-promisify": "^5.0.0",
-        "eslint-config-standard": "^10.2.1",
-        "eslint-plugin-import": "^2.8.0",
-        "eslint-plugin-node": "^5.2.1",
-        "eslint-plugin-promise": "^3.6.0",
-        "eslint-plugin-standard": "^3.0.1",
-        "extract-zip": "^1.6.6",
-        "fd-slicer": "^1.0.1",
-        "glob": "^7.1.2",
-        "https-proxy-agent": "^2.1.1",
-        "inflight": "^1.0.6",
-        "mime": "^2.0.3",
-        "minimatch": "^3.0.4",
-        "minimist": "^1.2.0",
-        "mkdirp": "^0.5.1",
-        "once": "^1.4.0",
-        "path-is-absolute": "^1.0.1",
-        "pend": "^1.2.0",
-        "progress": "^2.0.0",
-        "proxy-from-env": "^1.0.0",
-        "rimraf": "^2.6.2",
-        "typedarray": "^0.0.6",
-        "ultron": "^1.1.1",
-        "wrappy": "^1.0.2",
-        "ws": "^3.3.2",
-        "yauzl": "^2.9.1"
+        "@types/node": "^10.3.1"
     }
 }
