--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     },
     "author": "545570335@qq.com",
     "license": "MIT",
-    "dependencies": {},
+    "dependencies": {
+        "cheerio": "^1.0.0-rc.2",
+        "node-fetch": "^2.1.2"
+    },
     "devDependencies": {
         "@types/node": "^10.3.1"
     }
