--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "license": "MIT",
     "dependencies": {
         "cheerio": "^1.0.0-rc.2",
+        "mysql": "^2.15.0",
         "node-fetch": "^2.1.2"
     },
     "devDependencies": {
+        "@types/cheerio": "^0.22.7",
+        "@types/mysql": "^2.15.5",
         "@types/node": "^10.3.1"
     }
 }
