--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "cheerio": "^1.0.0-rc.2",
         "config": "^2.0.1",
         "mysql2": "^1.6.1",
+        "node-schedule": "^1.3.0",
         "sequelize": "^4.38.0"
     },
     "devDependencies": {
